# software_renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
_codeql_build_dir/: software_renderer
src/: CMakeLists.txt  IScene.h  SceneManager.cpp  SceneManager.h  TriangleScene.cpp  TriangleScene.h  main.cpp  swrBuffer.h  swrDevice.cpp  swrDevice.h
